Just a log of changes
Several changes that I have waiting for commit

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/2.7/generator/gatekeeper-container/container-resources-limits-memory-notset.yaml
+++ b/2.7/generator/gatekeeper-container/container-resources-limits-memory-notset.yaml
@@ -216,7 +216,7 @@ spec:
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: ContainerResourceMemory
 metadata:
-  name: containerresourcememory
+  name: containerresourcememoryc
 spec:
   enforcementAction: dryrun
   match:
