--- a/2.7/generator/gatekeeper-container/container-volumemount-inconsistent-path.yaml
+++ b/2.7/generator/gatekeeper-container/container-volumemount-inconsistent-path.yaml
@@ -424,7 +424,7 @@ spec:
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: ContainerVolumePath
 metadata:
-  name: containervolumepath
+  name: containervolumepathc
 spec:
   enforcementAction: dryrun
   match:
