--- a/2.7/generator/gatekeeper-container/container-volumemount-missing.yaml
+++ b/2.7/generator/gatekeeper-container/container-volumemount-missing.yaml
@@ -427,7 +427,7 @@ spec:
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: ContainerVolumeMissing
 metadata:
-  name: containervolumemissing
+  name: containervolumemissingc
 spec:
   enforcementAction: dryrun
   match:
