--- a/2.7/generator/gatekeeper-container/container-env-maxmemory-notset.yaml
+++ b/2.7/generator/gatekeeper-container/container-env-maxmemory-notset.yaml
@@ -221,7 +221,7 @@ spec:
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: ContainerEnvMaxMemory
 metadata:
-  name: containerenvmaxmemory
+  name: containerenvmaxmemoryc
 spec:
   enforcementAction: dryrun
   match:
