--- a/2.7/generator/gatekeeper-container/container-java-xmx-set.yaml
+++ b/2.7/generator/gatekeeper-container/container-java-xmx-set.yaml
@@ -229,7 +229,7 @@ spec:
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: ContainerJavaXmxSet
 metadata:
-  name: containerjavaxmxset
+  name: containerjavaxmxsetc
 spec:
   enforcementAction: dryrun
   match:
