--- a/2.7/generator/gatekeeper-container/container-livenessprobe-notset.yaml
+++ b/2.7/generator/gatekeeper-container/container-livenessprobe-notset.yaml
@@ -425,7 +425,7 @@ spec:
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: ContainerLivenessNotSet
 metadata:
-  name: containerlivenessnotset
+  name: containerlivenessnotsetc
 spec:
   enforcementAction: dryrun
   match:
