--- a/2.7/generator/gatekeeper-container/container-secret-mounted-envs.yaml
+++ b/2.7/generator/gatekeeper-container/container-secret-mounted-envs.yaml
@@ -427,7 +427,7 @@ spec:
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: ContainerSecretEnv
 metadata:
-  name: containersecretenv
+  name: containersecretenvc
 spec:
   enforcementAction: dryrun
   match:
