Change placement for the example app
Using a customer label selector for the example app

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/httpd-example/hubplacement.yaml
+++ b/httpd-example/hubplacement.yaml
@@ -8,4 +8,4 @@ spec:
   - requiredClusterSelector:
       labelSelector:
         matchExpressions:
-          - {key: name, operator: In, values: ["invalid"]}
+          - {key: oppapps, operator: In, values: ["httpd-example"]}
