Use the app label instead of name
The service selector expects to find the app label, not the name label

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/httpd-example/setup-resources.yaml
+++ b/httpd-example/setup-resources.yaml
@@ -21,7 +21,7 @@ spec:
     port: 8080
     targetPort: 8080
   selector:
-    name: httpd-example
+    app: httpd-example
 ---
 apiVersion: route.openshift.io/v1
 kind: Route
