--- a/httpd-example/httpd-example.yaml
+++ b/httpd-example/httpd-example.yaml
@@ -10,6 +10,7 @@ spec:
   selector:
     matchLabels:
       app: httpd-example
+      name: httpd-example
   template:
     metadata:
       labels:
