Example policies need to be ordered due to timing issue
The build needs the service account or it won't run, if there's a
timing problem, you see everything compliant but no build ran and the
deployment isn't working.  Adding the dependencies to try to resolve
this.

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/httpd-example/policyGenerator.yaml
+++ b/httpd-example/policyGenerator.yaml
@@ -10,6 +10,7 @@ policyDefaults:
   controls: 
     - CM-2 Baseline Configuration
   namespace: policies
+  orderPolicies: true
   placement:
     placementPath: placement.yaml
   remediationAction: enforce
@@ -24,11 +25,9 @@ policies:
   manifests:
     - path: setup-status.yaml
   remediationAction: inform
-- name: policy-example-httpd
-  manifests:
-    - path: httpd-example.yaml
 - name: policy-build-example-httpd
   manifests:
     - path: build-httpd-example.yaml
-  placement:
-    placementPath: hubplacement.yaml
+- name: policy-example-httpd
+  manifests:
+    - path: httpd-example.yaml
