openshift project needs to use eval interval, not watch

--- a/httpd-example/policyGenerator.yaml
+++ b/httpd-example/policyGenerator.yaml
@@ -19,6 +19,9 @@ policyDefaults:
     - NIST SP 800-53
 policies:
 - name: policy-example-setup
+  evaluationInterval:
+    compliant: 1m
+    noncompliant: 45s
   manifests:
     - path: setup-resources.yaml
 - name: policy-example-setup-status
